--- a/index.html
+++ b/index.html
@@ -26,14 +26,29 @@
   </head>
 <body>
   <section class="main-banner">
-    <div class="grid main-content wrapper">
-      <div class="main-logo unit xs-1 s-1 m-1-3 l-1-3">
-        <img class="img-flex" src="images/logo-main-banner.png" alt="">
+    <nav>
+      <div class="pad-t pad-b text-right wrapper main-nav">
+        <ul class="list-group-inline push-0">
+          <li><a class="gutter" href="https://www.dribbble.com/melanypelletier">Wedding</a></li>
+          <li><a class="gutter" href="https://www.instagram.com/melany.pv">Proposal</a></li>
+          <li><a class="gutter rsvp-nav-btn" href="https://www.behance.net/melanypv">RSVP</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="grid main-content wrapper gutter">
+      <div class="main-logo text-center unit xs-1 s-1 m-1-3 l-1-3">
+        <img class="img-flex push" src="images/logo-main-banner.png" alt="">
+        <div class="">
+          <a class="rsvp-main-btn ib" href="">RSVP</a>
+        </div>
       </div>
     </div>
   </section>
-  <section>
-    <h2>Welcome to our <br> Wedding Website!</h2>
+  <section class="wrapper">
+    <div class="max-length my-padding">
+      <h2>Welcome to our <br> Wedding Website!</h2>
+      <p>We’ve created this website as a hub for all of our wedding information.  Browse around to read our proposal story and learn more wedding details. Oh and while you’re here, don’t forget to <a class="rsvp-inline-link push-1-2" href="">RSVP</a>. We can’t wait to see you on <strong>Sunday October 8th, 2023</strong>!</p>
+    </div>
   </section>
 
   </body>
