--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <body>
   <section class="main-banner">
     <nav>
-      <div class="pad-t pad-b text-right wrapper main-nav">
+      <div class="pad-t pad-b wrapper main-nav">
         <ul class="list-group-inline push-0">
-          <li><a class="gutter" href="https://www.dribbble.com/melanypelletier">Wedding</a></li>
-          <li><a class="gutter" href="https://www.instagram.com/melany.pv">Proposal</a></li>
-          <li><a class="gutter rsvp-nav-btn" href="https://www.behance.net/melanypv">RSVP</a></li>
+          <li><a class="gutter micro" href="https://www.dribbble.com/melanypelletier">Wedding</a></li>
+          <li><a class="gutter micro" href="https://www.instagram.com/melany.pv">Proposal</a></li>
+          <li><a class="gutter micro rsvp-nav-btn" href="https://www.behance.net/melanypv">RSVP</a></li>
         </ul>
       </div>
     </nav>
@@ -46,8 +46,28 @@
   </section>
   <section class="wrapper">
     <div class="max-length my-padding">
+      <p class="leading-text">Hello There!</p>
       <h2>Welcome to our <br> Wedding Website!</h2>
       <p>We’ve created this website as a hub for all of our wedding information.  Browse around to read our proposal story and learn more wedding details. Oh and while you’re here, don’t forget to <a class="rsvp-inline-link push-1-2" href="">RSVP</a>. We can’t wait to see you on <strong>Sunday October 8th, 2023</strong>!</p>
+    </div>
+  </section>
+
+  <section class="venue-section beige">
+    <div class="grid grid-middle wrapper my-padding-top">
+      <div class="unit xs-1 s-1 m-1 l-1-3 unit-push-l-2-3 gutter">
+        <h2>Venue</h2>
+        <p>Both ceremony and reception will take place at Sidedoor Restaurant.</p>
+        <p class="push-0">Sidedoor Restaurant</p>
+        <p class="push-0">18b York Street</p>
+        <p class="push-0">Ottawa, ON</p>
+        <p class="push-0">K1N 5T5</p>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-2-3 unit-pull-l-1-3 gutter">
+        <img class="img-flex" src="images/sidedoor-illustration.png" alt="">
+      </div>
+
+
+
     </div>
   </section>
 
