--- a/index.html
+++ b/index.html
@@ -65,10 +65,48 @@
       <div class="unit xs-1 s-1 m-1 l-2-3 unit-pull-l-1-3 gutter">
         <img class="img-flex" src="images/sidedoor-illustration.png" alt="">
       </div>
-
-
-
     </div>
+  </section>
+  <section class="wedding-schedule-background">
+    <div class="wrapper gutter my-padding-top text-center">
+      <h2>The Big Day</h2>
+      <img class="img-flex" src="images/schedule.png" alt="">
+    </div>
+  </section>
+
+  <section class="wrapper my-padding">
+    <h2 class="text-center">Additional Information</h2>
+
+    <div class="grid">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top">
+          <div class="unit xs-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-3-4">
+            <h3 class="pad-t-1-2 push-0">Ceremony</h3>
+            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          </div> 
+        </div>  
+      </div>   
+
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top">
+          <div class="unit xs-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-3-4">
+            <h3 class="pad-t-1-2 push-0">Ceremony</h3>
+            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          </div> 
+        </div>  
+      </div>   
+    </div>
+
   </section>
 
   </body>
