Code the rest of info section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
   </section>
 
   <section class="wrapper my-padding">
-    <h2 class="text-center">Additional Information</h2>
+    <h2 class="text-center gutter green">Additional Information</h2>
+    <h3 class="info-sections gutter green">General</h3>
 
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
@@ -86,7 +87,7 @@
             </i>
           </div>   
           <div class="unit xs-3-4">
-            <h3 class="pad-t-1-2 push-0">Ceremony</h3>
+            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
             <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
           </div> 
         </div>  
@@ -100,14 +101,87 @@
             </i>
           </div>   
           <div class="unit xs-3-4">
-            <h3 class="pad-t-1-2 push-0">Ceremony</h3>
+            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
             <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
           </div> 
         </div>  
       </div>   
-    </div>
 
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+      <div class="grid grid-top">
+        <div class="unit xs-1-4">
+          <i class="">
+            <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+          </i>
+        </div>   
+        <div class="unit xs-3-4">
+          <h4 class="pad-t-1-2 push-0">Ceremony</h4>
+          <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+        </div> 
+      </div>  
+    </div>   
+  
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+      <div class="grid grid-top">
+        <div class="unit xs-1-4">
+          <i class="">
+            <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+          </i>
+        </div>   
+        <div class="unit xs-3-4">
+          <h4 class="pad-t-1-2 push-0">Ceremony</h4>
+          <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+        </div> 
+      </div>  
+    </div>   
+  </div>
+
+  <h3 class="info-sections gutter green">Food & Drink</h3>
+
+    <div class="grid">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top">
+          <div class="unit xs-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-3-4">
+            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
+            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          </div> 
+        </div>  
+      </div>   
+
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top">
+          <div class="unit xs-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-3-4">
+            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
+            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          </div> 
+        </div>  
+      </div>   
+
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top">
+          <div class="unit xs-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-3-4">
+            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
+            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          </div> 
+        </div>  
+      </div>   
+    </div>  
   </section>
 
-  </body>
-  </html>
+</body>
+</html>
