--- a/index.html
+++ b/index.html
@@ -182,6 +182,24 @@
       </div>   
     </div>  
   </section>
+  <footer>
+    <img class="img-flex footer-monogram my-padding-bottom" src="images/colour-monogram.png" alt="">
+    <div class="footer pad-t">
+      <div class="wrapper">
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1-3 gutter">
+            <p class="micro light-grey">melandnick2023@gmail.com</p>
+          </div>
+          <div class="unit xs-1 s-1 m-1-3 gutter footer-text">
+            <p class="micro light-grey">Website designed & coded by Mel. Reviewed & approved by Nick.</p>
+          </div>
+          <div class="unit xs-1 s-1 m-1-3 gutter photographer">
+            <p class="micro light-grey">Photography by <a href="https://www.farrahsanjariphotography.com/">Farrah Sanjary Photography</a></p>
+          </div>
+        </div>
+      </div>
+    </div>  
+  </footer>
 
 </body>
 </html>
