--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href='css/type.css' rel='stylesheet'>
     <link href='css/modules.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://use.typekit.net/yty1hgi.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mgf6krk.css">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -29,9 +29,9 @@
     <nav>
       <div class="pad-t pad-b wrapper main-nav">
         <ul class="list-group-inline push-0">
-          <li><a class="gutter micro" href="https://www.dribbble.com/melanypelletier">Wedding</a></li>
-          <li><a class="gutter micro" href="https://www.instagram.com/melany.pv">Proposal</a></li>
-          <li><a class="gutter micro rsvp-nav-btn" href="https://www.behance.net/melanypv">RSVP</a></li>
+          <li class="gutter"><a class="micro semibold nav-link active" href="https://www.dribbble.com/melanypelletier">Wedding</a></li>
+          <li class="gutter"><a class="micro semibold nav-link" href="https://www.instagram.com/melany.pv">The Proposal</a></li>
+          <li class="gutter"><a class="micro semibold rsvp-nav-btn" href="https://www.behance.net/melanypv">RSVP</a></li>
         </ul>
       </div>
     </nav>
@@ -39,34 +39,35 @@
       <div class="main-logo text-center unit xs-1 s-1 m-1-3 l-1-3">
         <img class="img-flex push" src="images/logo-main-banner.png" alt="">
         <div class="">
-          <a class="rsvp-main-btn ib" href="">RSVP</a>
+          <a class="rsvp-main-btn semibold ib" href="">RSVP</a>
         </div>
       </div>
     </div>
   </section>
   <section class="wrapper">
-    <div class="max-length my-padding">
-      <p class="leading-text">Hello There!</p>
-      <h2>Welcome to our <br> Wedding Website!</h2>
-      <p>We’ve created this website as a hub for all of our wedding information.  Browse around to read our proposal story and learn more wedding details. Oh and while you’re here, don’t forget to <a class="rsvp-inline-link push-1-2" href="">RSVP</a>. We can’t wait to see you on <strong>Sunday October 8th, 2023</strong>!</p>
+    <div class="max-length my-padding gutter">
+      <p class="leading-text push-1-2s semibold">Hello There!</p>
+      <h2 class="black yotta">Welcome to our <br> Wedding Website!</h2>
+      <p class="intro-paragraph black">We’ve created this website as a hub for all of our wedding information.  Browse around to read our proposal story and learn more wedding details. Oh and while you’re here, don’t forget to <a class="rsvp-inline-link push-1-2" href="">RSVP</a>. We can’t wait to see you on <strong>Sunday October 8th, 2023</strong>!</p>
     </div>
   </section>
 
   <section class="venue-section beige">
     <div class="grid grid-middle wrapper my-padding-top">
       <div class="unit xs-1 s-1 m-1 l-1-3 unit-push-l-2-3 gutter">
-        <h2>Venue</h2>
-        <p>Both ceremony and reception will take place at Sidedoor Restaurant.</p>
-        <p class="push-0">Sidedoor Restaurant</p>
-        <p class="push-0">18b York Street</p>
-        <p class="push-0">Ottawa, ON</p>
-        <p class="push-0">K1N 5T5</p>
+        <h2 class="black yotta">Venue</h2>
+        <p class="black">Both ceremony and reception will take place at Sidedoor Restaurant.</p>
+        <p class="push-0 semibold black">Sidedoor Restaurant</p>
+        <p class="push-0 black">18b York Street</p>
+        <p class="push-0 black">Ottawa, ON</p>
+        <p class="push-0 black">K1N 5T5</p>
       </div>
       <div class="unit xs-1 s-1 m-1 l-2-3 unit-pull-l-1-3 gutter">
         <img class="img-flex" src="images/sidedoor-illustration.png" alt="">
       </div>
     </div>
   </section>
+
   <section class="wedding-schedule-background">
     <div class="wrapper gutter my-padding-top text-center">
       <h2>The Big Day</h2>
