Make additional info responsive and add content

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <div class="grid grid-middle wrapper my-padding-top">
       <div class="unit xs-1 s-1 m-1 l-1-3 unit-push-l-2-3 gutter">
         <h2 class="black yotta">Venue</h2>
-        <p class="black">Both ceremony and reception will take place at Sidedoor Restaurant.</p>
-        <p class="push-0 semibold black">Sidedoor Restaurant</p>
+        <p class="black mega">Both ceremony and reception will take place at Sidedoor Restaurant.</p>
+        <p class="push-0 semibold black mega">Sidedoor Restaurant</p>
         <p class="push-0 black">18b York Street</p>
         <p class="push-0 black">Ottawa, ON</p>
         <p class="push-0 black">K1N 5T5</p>
@@ -67,122 +67,124 @@
       </div>
     </div>
   </section>
-
+ 
   <section class="wedding-schedule-background">
     <div class="wrapper gutter my-padding-top text-center">
-      <h2>The Big Day</h2>
+      <h2 class="yotta black push-2">The Big Day</h2>
       <img class="img-flex" src="images/schedule.png" alt="">
     </div>
   </section>
 
-  <section class="wrapper my-padding">
-    <h2 class="text-center gutter green">Additional Information</h2>
-    <h3 class="info-sections gutter green">General</h3>
+  <section class="wrapper my-padding additional-info-section">
+    <h2 class="text-center gutter green yotta">Additional Information</h2>
+    <h3 class="info-sections gutter green giga">General</h3>
 
     <div class="grid">
+
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-        <div class="grid grid-top">
-          <div class="unit xs-1-4">
+        <div class="grid grid-top push info-block">
+          <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
               <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
             </i>
           </div>   
-          <div class="unit xs-3-4">
-            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
-            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          <div class="unit xs-1 s-3-4 m-1 l-3-4">
+            <h4 class="pad-t-1-2 push-0 mega black">Ceremony</h4>
+            <p class="black">Guest arrival begins at 3:00 PM for a 3:30 PM ceremony.  </p>
           </div> 
         </div>  
-      </div>   
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-        <div class="grid grid-top">
-          <div class="unit xs-1-4">
+        <div class="grid grid-top push info-block">
+          <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+              <img class="img-flex info-icon" src="images/weather-light.png" alt="">
             </i>
           </div>   
-          <div class="unit xs-3-4">
-            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
-            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          <div class="unit xs-1 s-3-4 m-1 l-3-4">
+            <h4 class="pad-t-1-2 push-0 mega black">Weather</h4>
+            <p class="black">The day will take place indoors & outdoors weather permitting so please dress accordingly!</p>
           </div> 
         </div>  
-      </div>   
+      </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-      <div class="grid grid-top">
-        <div class="unit xs-1-4">
-          <i class="">
-            <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
-          </i>
-        </div>   
-        <div class="unit xs-3-4">
-          <h4 class="pad-t-1-2 push-0">Ceremony</h4>
-          <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
-        </div> 
-      </div>  
-    </div>   
-  
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-      <div class="grid grid-top">
-        <div class="unit xs-1-4">
-          <i class="">
-            <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
-          </i>
-        </div>   
-        <div class="unit xs-3-4">
-          <h4 class="pad-t-1-2 push-0">Ceremony</h4>
-          <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
-        </div> 
-      </div>  
-    </div>   
-  </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top push info-block">
+          <div class="unit xs-1 s-1-4 m-1 l-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/dress-code-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-1 s-3-4 m-1 l-3-4">
+            <h4 class="pad-t-1-2 push-0 mega black">Dress Code</h4>
+            <p class="black">We spent a lot of money on a dress & suit so please dress formally.</p>
+          </div> 
+        </div>  
+      </div> 
 
-  <h3 class="info-sections gutter green">Food & Drink</h3>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top push info-block">
+          <div class="unit xs-1 s-1-4 m-1 l-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/registry-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-1 s-3-4 m-1 l-3-4">
+            <h4 class="pad-t-1-2 push-0 mega black">Registry</h4>
+            <p class="black">We’re so happy to have you at our wedding! If you’d like to help us continue our life together, we would appreciate cash gifts.</p>
+          </div> 
+        </div>  
+      </div>  
+    </div>
+    
+    <h3 class="info-sections gutter green giga">Food & Drink</h3>
 
     <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-        <div class="grid grid-top">
-          <div class="unit xs-1-4">
-            <i class="">
-              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
-            </i>
-          </div>   
-          <div class="unit xs-3-4">
-            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
-            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
-          </div> 
-        </div>  
-      </div>   
 
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-        <div class="grid grid-top">
-          <div class="unit xs-1-4">
+        <div class="grid grid-top push info-block">
+          <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+              <img class="img-flex info-icon" src="images/menu-light.png" alt="">
             </i>
           </div>   
-          <div class="unit xs-3-4">
-            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
-            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          <div class="unit xs-1 s-3-4 m-1 l-3-4">
+            <h4 class="pad-t-1-2 push-0 mega black">Food</h4>
+            <p class="black">A 3 course meal and a few surprises are planned so please arrive on an empty stomach! You will be able to select your meal the day of.</p>
           </div> 
         </div>  
-      </div>   
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-        <div class="grid grid-top">
-          <div class="unit xs-1-4">
+        <div class="grid grid-top push info-block">
+          <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+              <img class="img-flex info-icon" src="images/drinks-light.png" alt="">
             </i>
           </div>   
-          <div class="unit xs-3-4">
-            <h4 class="pad-t-1-2 push-0">Ceremony</h4>
-            <p>Guest arrival begins at 3:00 PM for a 3:30 PM ceremony. </p>
+          <div class="unit xs-1 s-3-4 m-1 l-3-4">
+            <h4 class="pad-t-1-2 push-0 mega black">Drinks</h4>
+            <p class="black">Wine with dinner and 2 drink tickets per guest will be provided.  Additional drinks can be purchased at the bar.</p>
           </div> 
         </div>  
-      </div>   
-    </div>  
+      </div>
+
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
+        <div class="grid grid-top push info-block">
+          <div class="unit xs-1 s-1-4 m-1 l-1-4">
+            <i class="">
+              <img class="img-flex info-icon" src="images/dress-code-light.png" alt="">
+            </i>
+          </div>   
+          <div class="unit xs-1 s-3-4 m-1 l-3-4">
+            <h4 class="pad-t-1-2 push-0 mega black">Dietary Restrictions</h4>
+            <p class="black">Please let us know if you have any dietary restrictions when you RSVP.</p>
+          </div> 
+        </div>  
+      </div> 
   </section>
+
   <footer>
     <img class="img-flex footer-monogram my-padding-bottom" src="images/colour-monogram.png" alt="">
     <div class="footer pad-t">
