Add banner and make responsive

--- a/index.html
+++ b/index.html
@@ -185,8 +185,21 @@
       </div> 
   </section>
 
+  <section>
+    <div class="celebrate-banner">
+      <div class=" celebrate-text">
+        <div class="grid grid-middle wrapper gutter">
+          <div class="unit xs-1 s-1 m-1 l-1-2">
+            <h2 class="white yotta text-center">We Can’t Wait to Celebrate with You!</h2>
+          </div>
+        </div>  
+      </div>  
+    </div>
+
+  </section>
+
   <footer>
-    <img class="img-flex footer-monogram my-padding-bottom" src="images/colour-monogram.png" alt="">
+    <img class="img-flex footer-monogram my-padding" src="images/colour-monogram.png" alt="">
     <div class="footer pad-t">
       <div class="wrapper">
         <div class="grid">
