--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="list-group-inline push-0">
           <li class="gutter"><a class="micro semibold nav-link active" href="https://www.dribbble.com/melanypelletier">Wedding</a></li>
           <li class="gutter"><a class="micro semibold nav-link" href="https://www.instagram.com/melany.pv">The Proposal</a></li>
-          <li class="gutter"><a class="micro semibold rsvp-nav-btn" href="https://www.behance.net/melanypv">RSVP</a></li>
+          <li class="gutter"><a class="micro semibold rsvp-nav-btn" href="https://www.theknot.com/us/melany-pelletier-vaillant-and-nicholas-campbell-oct-2023/rsvp">RSVP</a></li>
         </ul>
       </div>
     </nav>
@@ -39,7 +39,7 @@
       <div class="main-logo text-center unit xs-1 s-1 m-1-3 l-1-3">
         <img class="img-flex push" src="images/logo-main-banner.png" alt="">
         <div class="">
-          <a class="rsvp-main-btn semibold ib" href="">RSVP</a>
+          <a class="rsvp-main-btn semibold ib" href="https://www.theknot.com/us/melany-pelletier-vaillant-and-nicholas-campbell-oct-2023/rsvp">RSVP</a>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
     <div class="max-length my-padding gutter">
       <p class="leading-text push-1-2s semibold">Hello There!</p>
       <h2 class="black yotta">Welcome to our <br> Wedding Website!</h2>
-      <p class="intro-paragraph black">We’ve created this website as a hub for all of our wedding information.  Browse around to read our proposal story and learn more wedding details. Oh and while you’re here, don’t forget to <a class="rsvp-inline-link push-1-2" href="">RSVP</a>. We can’t wait to see you on <strong>Sunday October 8th, 2023</strong>!</p>
+      <p class="intro-paragraph black">We’ve created this website as a hub for all of our wedding information.  Browse around to read our proposal story and learn more wedding details. Oh and while you’re here, don’t forget to <a class="rsvp-inline-link push-1-2" href="https://www.theknot.com/us/melany-pelletier-vaillant-and-nicholas-campbell-oct-2023/rsvp">RSVP</a>. We can’t wait to see you on <strong>Sunday October 8th, 2023</strong>!</p>
     </div>
   </section>
 
