--- a/proposal.html
+++ b/proposal.html
@@ -25,7 +25,7 @@
     <link rel="manifest" href="/site.webmanifest">
   </head>
 <body>
-  <section class="main-banner">
+  <section class="proposal-banner">
     <nav>
       <div class="pad-t pad-b wrapper main-nav">
         <ul class="list-group-inline push-0">
@@ -36,11 +36,10 @@
       </div>
     </nav>
     <div class="grid main-content wrapper gutter">
-      <div class="main-logo text-center unit xs-1 s-1 m-1-3 l-1-3">
-        <img class="img-flex push" src="images/logo-main-banner.png" alt="">
-        <div class="">
-          <a class="rsvp-main-btn semibold ib" href="https://www.theknot.com/us/melany-pelletier-vaillant-and-nicholas-campbell-oct-2023/rsvp">RSVP</a>
-        </div>
-      </div>
+      <div class="main-logo white unit xs-1 s-1 m-1-2 l-1-2">
+        <h2 class="yotta italic">We'll tell the story of that night</h2>
+        <h3 class="pink mega">(That’s a Hamilton reference by the way)</h3>
     </div>
   </section>
+  </body>
+  </html>
