Fix background image to fit large screens

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </section>
   <section class="wrapper">
     <div class="max-length my-padding gutter">
-      <p class="leading-text push-1-2s semibold">Hello There!</p>
+      <p class="leading-text push-0 semibold">Hello There!</p>
       <h2 class="black yotta">Welcome to our <br> Wedding Website!</h2>
       <p class="intro-paragraph black">We’ve created this website as a hub for all of our wedding information.  Browse around to read our proposal story and learn more wedding details. Oh and while you’re here, don’t forget to <a class="rsvp-inline-link push-1-2" href="https://www.theknot.com/us/melany-pelletier-vaillant-and-nicholas-campbell-oct-2023/rsvp">RSVP</a>. We can’t wait to see you on <strong>Sunday October 8th, 2023</strong>!</p>
     </div>
