Add profiles and fun facts

--- a/proposal.html
+++ b/proposal.html
@@ -41,5 +41,39 @@
         <h3 class="pink mega">(That’s a Hamilton reference by the way)</h3>
     </div>
   </section>
-  </body>
-  </html>
+
+  <section class="my-padding wrapper">
+    <h2 class="text-center yotta black">But first,<br> A few fun facts</h2>
+
+    <div class="grid grid-top">
+
+      <div class="unit s-1 m-1-2 l-1-2 grid gutter text-center">
+        <div class="unit s-1 push">
+          <img class="img-flex portrait" src="images/mel-portrait.png" alt="">
+        </div>  
+        <div class="unit s-1">
+          <h3 class="serif exa">Mel</h3>
+          <p class="push-1-2 black mega">Designer</p>
+          <p class="push-1-2 black mega">Cardigan Wearer</p>
+          <p class="push-1-2 black mega">Popcorn Eater</p>
+          <p class="push-1-2 black mega">Movie Watcher</p>
+        </div>
+      </div>
+
+      <div class="unit s-1 m-1-2 l-1-2 grid gutter text-center">
+        <div class="unit s-1 push">
+          <img class="img-flex portrait" src="images/nick-portrait.png" alt="">
+        </div>  
+        <div class="unit s-1">
+          <h3 class="serif exa">Nick</h3>
+          <p class="push-1-2 black mega">Engineerer</p>
+          <p class="push-1-2 black mega">Serial Snacker</p>
+          <p class="push-1-2 black mega">Popcorn Maker</p>
+          <p class="push-1-2 black mega">Movie Explainer</p>
+        </div>
+      </div>
+
+    </div> 
+  </section>
+</body>
+</html>
