Code proposal story banner

--- a/proposal.html
+++ b/proposal.html
@@ -52,7 +52,7 @@
           <img class="img-flex portrait" src="images/mel-portrait.png" alt="">
         </div>  
         <div class="unit s-1">
-          <h3 class="serif exa">Mel</h3>
+          <h3 class="serif exa push-1-2">Mel</h3>
           <p class="push-1-2 black mega">Designer</p>
           <p class="push-1-2 black mega">Cardigan Wearer</p>
           <p class="push-1-2 black mega">Popcorn Eater</p>
@@ -65,7 +65,7 @@
           <img class="img-flex portrait" src="images/nick-portrait.png" alt="">
         </div>  
         <div class="unit s-1">
-          <h3 class="serif exa">Nick</h3>
+          <h3 class="serif exa push-1-2">Nick</h3>
           <p class="push-1-2 black mega">Engineerer</p>
           <p class="push-1-2 black mega">Serial Snacker</p>
           <p class="push-1-2 black mega">Popcorn Maker</p>
@@ -74,6 +74,19 @@
       </div>
 
     </div> 
+  </section>
+
+  <section>
+    <div class="proposal-story-banner">
+      <div class="proposal-text">
+        <div class="grid grid-middle wrapper gutter">
+          <div class="unit xs-1 s-1 m-1 l-1-2">
+            <h2 class="white yotta text-center">The Proposal</h2>
+          </div>
+        </div>  
+      </div>  
+    </div>
+
   </section>
 </body>
 </html>
