--- a/proposal.html
+++ b/proposal.html
@@ -88,5 +88,76 @@
     </div>
 
   </section>
+
+  <section class="wrapper my-padding">
+    <div class="grid grid-middle">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
+        <div class=" story-column">
+          <h3 class="giga green">From Mel's Perspective</h3>
+          <p class="black intro-paragraph">After a 2 year wait we finally got to see Hamilton at the NAC. To say I was excited is an understatement (to give you an idea, I know all the lyrics to My Shot)! </p>
+          <p class="black intro-paragraph">It was a Thursday, and usually I work from home on that day. But Nick convinced me that it would be easier if we both went to the office so I could walk over to the NAC and he could meet me there. Makes sense, right? </p>
+          <p class="black intro-paragraph">We had a great dinner then made our way to the theatre. I was so happy just to be there (as you can tell by the tears). The show ended and we made our way home.  </p>
+          <figure>
+            <img class="img-flex" src="images/story-hamilton-stage.jpg" alt="">
+            <figcaption class="black italic sans-serif">The Room Where It Didn't Happen</figcaption>
+          </figure>
+        </div>
+        </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
+        <div class="story-column">
+          <img class="img-flex push" src="images/story-hamilton-pose.jpg" alt="">
+          <p class="black intro-paragraph">When we pulled in, I thought I saw light inside but didn’t think anything of it. It’s only when I approached the door did I notice candles and flower petals lined the staircase. That’s when the realization of what was happening hit me and I started crying. But not like cute, happy tears, I mean BAWLING.</p>
+          <p class="black intro-paragraph">Nick guided me inside, and up the stairs. When we reached the top I saw the Will you marry me? sign on the counter and he got down on one knee. IT WAS PERFECT!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="grid grid-top">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter pad-t-2">
+        <div class=" story-column">
+          <h3 class="giga green">From Nick's Perspective</h3>
+          <p class="black intro-paragraph">I lied.</p>
+          <p class="black intro-paragraph">After dropping her off at work, I didn’t go to the office. I went home to set everything up. I turned them all on and I left. When I picked her up I kept thinking she had no idea this was coming.  At dinner, I was playing it cool loving the fact that she didn’t know what was happening.</p>
+        </div>
+        </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
+        <div class="story-column">
+          <img class="img-flex push" src="images/story-sign.jpg" alt="">
+          <p class="black intro-paragraph">I was surprised by how much I liked the show.  After the show was done, I knew there was no backing out now.  So we drove home and no matter how much I was rehearsing what I was going to say in my head, my mind was a blank. I got down on one knee and blurted out whatever I could. For some reason she still said yes.</p>
+        </div>
+        </div>
+    </div>
+  </section>
+
+  <section class="beige">
+    <div class="grid wrapper my-padding">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
+        <img class="img-flex" src="images/nick-and-mel-portrait.gif" alt="">
+      </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
+        <h2 class="yotta black">Shameless Plug</h2>
+        <p>Want to read more stories about us? Check out our comics!</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <img class="img-flex footer-monogram my-padding" src="images/colour-monogram.png" alt="">
+    <div class="footer pad-t">
+      <div class="wrapper">
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1-3 gutter">
+            <p class="micro light-grey">melandnick2023@gmail.com</p>
+          </div>
+          <div class="unit xs-1 s-1 m-1-3 gutter footer-text">
+            <p class="micro light-grey">Website designed & coded by Mel. Reviewed & approved by Nick.</p>
+          </div>
+          <div class="unit xs-1 s-1 m-1-3 gutter photographer">
+            <p class="micro light-grey">Photography by <a href="https://www.farrahsanjariphotography.com/">Farrah Sanjary Photography</a></p>
+          </div>
+        </div>
+      </div>
+    </div>  
+  </footer>
 </body>
 </html>
