Code comics section

--- a/proposal.html
+++ b/proposal.html
@@ -130,13 +130,14 @@
   </section>
 
   <section class="beige">
-    <div class="grid wrapper my-padding">
+    <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
         <img class="img-flex" src="images/nick-and-mel-portrait.gif" alt="">
       </div>
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
-        <h2 class="yotta black">Shameless Plug</h2>
-        <p>Want to read more stories about us? Check out our comics!</p>
+        <h2 class="yotta black">Shameless<br>Plug</h2>
+        <p class="black push-1-2">Want to read more stories about us?<br>Check out our comics!</p>
+        <p class="mega push"><a class="comics-link bold black " href="https://nickandmelcomics.com/">nickandmelcomics.com</a></p>
       </div>
     </div>
   </section>
