Add alt text and make images smaller

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en-ca'>
   <head>
     <meta charset='utf-8'>
-    <title>Mel and Nick Wedding</title>
+    <title>Mel and Nick's Wedding</title>
     <meta name="description" content="Mel and Nick's wedding website">
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <!-- Facebook -->
@@ -37,7 +37,7 @@
     </nav>
     <div class="grid main-content wrapper gutter">
       <div class="main-logo text-center unit xs-1 s-1 m-1-3 l-1-3">
-        <img class="img-flex push" src="images/logo-main-banner.png" alt="">
+        <img class="img-flex push" src="images/logo-main-banner.png" alt="Monogram of Mel and Nick's logo.">
         <div class="">
           <a class="rsvp-main-btn semibold ib" href="https://www.theknot.com/us/melany-pelletier-vaillant-and-nicholas-campbell-oct-2023/rsvp">RSVP</a>
         </div>
@@ -63,7 +63,7 @@
         <p class="push-0 black">K1N 5T5</p>
       </div>
       <div class="unit xs-1 s-1 m-1 l-2-3 unit-pull-l-1-3 gutter">
-        <img class="img-flex" src="images/sidedoor-illustration.png" alt="">
+        <img class="img-flex" src="images/sidedoor-illustration.png" alt="Illustration of the entrance of the Side Door Restaurant.">
       </div>
     </div>
   </section>
@@ -71,7 +71,7 @@
   <section class="wedding-schedule-background">
     <div class="wrapper gutter my-padding-top text-center">
       <h2 class="yotta black push-2">The Big Day</h2>
-      <img class="img-flex" src="images/schedule.png" alt="">
+      <img class="img-flex" src="images/schedule.png" alt="Image of Mel and Nick embracing on a bridge.">
     </div>
   </section>
 
@@ -85,7 +85,7 @@
         <div class="grid grid-top push info-block">
           <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="">
+              <img class="img-flex info-icon" src="images/ceremony-light.png" alt="Icon of a wedding arch with flowers.">
             </i>
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
@@ -99,7 +99,7 @@
         <div class="grid grid-top push info-block">
           <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/weather-light.png" alt="">
+              <img class="img-flex info-icon" src="images/weather-light.png" alt="Icon of the sun.">
             </i>
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
@@ -113,7 +113,7 @@
         <div class="grid grid-top push info-block">
           <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/dress-code-light.png" alt="">
+              <img class="img-flex info-icon" src="images/dress-code-light.png" alt="Icon of a wedding dress and suit.">
             </i>
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
@@ -127,7 +127,7 @@
         <div class="grid grid-top push info-block">
           <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/registry-light.png" alt="">
+              <img class="img-flex info-icon" src="images/registry-light.png" alt="Icon of a gift certificate.">
             </i>
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
@@ -146,7 +146,7 @@
         <div class="grid grid-top push info-block">
           <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/menu-light.png" alt="">
+              <img class="img-flex info-icon" src="images/menu-light.png" alt="Icon of a restaurant menu.">
             </i>
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
@@ -160,12 +160,12 @@
         <div class="grid grid-top push info-block">
           <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/drinks-light.png" alt="">
+              <img class="img-flex info-icon" src="images/drinks-light.png" alt="Icon of a tickets with wine glass.">
             </i>
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
             <h4 class="pad-t-1-2 push-0 mega black">Drinks</h4>
-            <p class="black">Wine with dinner and 2 drink tickets per guest will be provided.  Additional drinks can be purchased at the bar.</p>
+            <p class="black">Wine with dinner and 2 drink tickets per guest will be provided. Additional drinks can be purchased at the bar.</p>
           </div> 
         </div>  
       </div>
@@ -174,7 +174,7 @@
         <div class="grid grid-top push info-block">
           <div class="unit xs-1 s-1-4 m-1 l-1-4">
             <i class="">
-              <img class="img-flex info-icon" src="images/dress-code-light.png" alt="">
+              <img class="img-flex info-icon" src="images/dietary-restrictions.png" alt="Icon of a fork, spoon and knife.">
             </i>
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
@@ -199,7 +199,7 @@
   </section>
 
   <footer>
-    <img class="img-flex footer-monogram my-padding" src="images/colour-monogram.png" alt="">
+    <img class="img-flex footer-monogram my-padding" src="images/colour-monogram.png" alt="Monogram of Mel and Nick's wedding logo.">
     <div class="footer pad-t">
       <div class="wrapper">
         <div class="grid">
