Fix navigation names

--- a/proposal.html
+++ b/proposal.html
@@ -29,7 +29,7 @@
     <nav>
       <div class="pad-t pad-b wrapper main-nav">
         <ul class="list-group-inline push-0">
-          <li class="gutter"><a class="micro semibold nav-link" href="index.html">Wedding</a></li>
+          <li class="gutter"><a class="micro semibold nav-link" href="index.html">The Wedding</a></li>
           <li class="gutter"><a class="micro semibold nav-link active" href="proposal.html">The Proposal</a></li>
           <li class="gutter"><a class="micro semibold rsvp-nav-btn" href="https://www.theknot.com/us/melany-pelletier-vaillant-and-nicholas-campbell-oct-2023/rsvp">RSVP</a></li>
         </ul>
