Fix bar information

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </div>   
           <div class="unit xs-1 s-3-4 m-1 l-3-4">
             <h4 class="pad-t-1-2 push-0 mega black">Drinks</h4>
-            <p class="black">Wine with dinner and 2 drink tickets per guest will be provided. Additional drinks can be purchased at the bar.</p>
+            <p class="black">Wine with dinner and a host bar will be provided. Additional drinks can be purchased at the bar.</p>
           </div> 
         </div>  
       </div>
